k8s/apps/beast/encoder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: encoder
    app.kubernetes.io/part-of: beast
  name: beast-encoder
  namespace: beast
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: encoder
      app.kubernetes.io/part-of: beast
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: encoder
        app.kubernetes.io/part-of: beast
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - configMapRef:
                name: beast-config
            - secretRef:
                name: beast-rabbitmq
            - secretRef:
                name: beast-crypto
            - secretRef:
                name: beast-s3-credentials
          image: ghcr.io/walnuts1018/beast/encoder:18de2a4-amd64@sha256:d65345f89543076be0564de50202d0eb159c1ea5df88fba581330389def670ab
          imagePullPolicy: Always
          name: encoder
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp/beast-encoder
              name: work
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: beast
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: work
