k8s/apps/beast/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: beast
  name: beast-frontend
  namespace: beast
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: frontend
  type: ClusterIP
