k8s/apps/beast/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beast
  namespace: beast
spec:
  hostnames:
    - beast.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: beast-apiserver
          port: 8080
      matches:
        - path:
            type: Exact
            value: /api/videos/upload
      timeouts:
        backendRequest: 0s
        request: 0s
    - backendRefs:
        - name: beast-frontend
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
