k8s/apps/beast/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: beast
  namespace: beast
spec:
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          jwt:
            claims:
              - name: my:zitadel:grants
                valueType: StringArray
                values:
                  - 391616443902329228:beast-user
            provider: zitadel
  jwt:
    providers:
      - issuer: https://auth.walnuts.dev
        name: zitadel
        remoteJWKS:
          uri: https://auth.walnuts.dev/oauth/v2/keys
  oidc:
    clientIDRef:
      name: beast-oidc-gateway
    clientSecret:
      name: beast-oidc-gateway
    forwardAccessToken: true
    logoutPath: /oauth2/logout
    provider:
      issuer: https://auth.walnuts.dev
    scopes:
      - openid
      - email
      - profile
      - offline_access
      - urn:zitadel:iam:org:projects:roles
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: beast
