k8s/apps/beast/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: beast-default-deny
  namespace: beast
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
